# hass-pronote

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements_test.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  hacs.yml  hassfest.yml  release.yml  stale.yml
custom_components/pronote/: __init__.py  _compat.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  pronote_formatter.py  pronote_helper.py  repairs.py  sensor.py  strings.json
custom_components/pronote/api/: __init__.py  auth.py  circuit_breaker.py  client.py  exceptions.py  models.py
custom_components/pronote/translations/: en.json  fr.json  pt.json
tests/: __init__.py  conftest.py  test_api.py  test_calendar.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_compare.py  test_coordinator_helpers.py  test_diagnostics.py  test_entity.py  test_init.py  test_pronote_formatter.py  test_pronote_helper.py  test_repairs.py  test_sensor.py
