[project]
name = "hass-pronote"
version = "0.15.5"
description = "Pronote integration for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F403",   # star imports used by design
    "F405",   # names from star imports
]

[tool.ruff.lint.per-file-ignores]
"custom_components/pronote/config_flow.py" = ["E402"]
"custom_components/pronote/pronote_helper.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.pronote"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["custom_components/pronote"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
fail_under = 40
